@@ -8,7 +8,6 @@ import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.apache.commons.lang3.builder.ToStringStyle;
 import org.mind.framework.annotation.Filter;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -38,7 +37,7 @@ public class FilterRegistration implements Comparable<FilterRegistration> {
         this.order = annotation.order();
         this.uriPatterns = annotation.value();
         this.matchAfter = annotation.matchAfter();
-        this.dispatcherTypes = Arrays.asList(annotation.dispatcherTypes());
+        this.dispatcherTypes = List.of(annotation.dispatcherTypes());
     }
 
     @Override
