@@ -6,7 +6,6 @@ import org.mind.framework.annotation.EnableCache;
 import org.springframework.aop.framework.AopContext;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -24,7 +23,7 @@ public class TestServiceComponent {
     @Cachein(prefix = CACHE_KEY, suffix = "#{userId}_#{vars}")
     public List<Object> get(String vars, long userId) {
         log.debug("--------------未实现interface: get");
-        return Arrays.asList(234L, 32, 32);
+        return List.of(234L, 32, 32);
     }
 
 
